tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_turbofish_trait_function_with_turbofish_on_trait_gives_error/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type bool, found type Field
   ┌─ src/main.nr:13:39
   │
13 │         let _: i32 = Foo::<bool>::foo(1);
   │                                       -
   │

Aborting due to 1 previous error
